# double-player-playing-ball-game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/toolchains/: vcpkg.cmake
includes/game/: ai_controller.hpp  ball.hpp  constants.hpp  energy_bar.hpp  game_controller.hpp  game_types.hpp  input_manager.hpp  paddle.hpp
qml/: AccentButton.qml  BindingRow.qml  DifficultyChip.qml  Main.qml  ModeCard.qml  PanelSurface.qml  StatPill.qml
src/: ai_controller.cpp  ball.cpp  energy_bar.cpp  game_controller.cpp  input_manager.cpp  main.cpp  paddle.cpp
